Added styling to the Todo item.

--- a/src/components/todo/Todo.html
+++ b/src/components/todo/Todo.html
@@ -1,3 +1,4 @@
 <template>
-  <p>${text}</p>
+  <p style.bind="styles.todo">${text}</p>
+  <button click.delegate="toggleCompleted()">Toggle Completed</button>
 </template>
