--- a/src/components/todo/TodoList.html
+++ b/src/components/todo/TodoList.html
@@ -2,6 +2,9 @@
   <require from="components/todo/Todo"></require>
 
   <h2>Todo list:</h2>
+  <div if.bind="!props.todos || props.todos.length === 0">
+    Please add some todos and have fun!
+  </div>
   <div repeat.for="todo of props.todos">
     <todo id.bind="todo.id"
           text.bind="todo.text" 
@@ -9,4 +12,8 @@
           toggle.bind="props.todoToggle">
     </todo>
   </div>
+  <form submit.trigger="addTodo()">
+    <input type="text" value.bind="todoText">
+    <button type="submit">Add Todo</button>
+  </form>
 </template>
